# DINOv3_custom_training

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  dinov3-project-spec.md  kaggle.json  pyproject.toml  requirements-deploy.txt  requirements.txt  setup_dev.sh
.devcontainer/: Dockerfile  devcontainer.json
docker/: Dockerfile.deploy  docker-compose.yml
docker/monitoring/: alerts.yml  prometheus.yml
docker/monitoring/grafana/dashboards/: dinov3-overview.json
docker/nginx/: nginx.conf
docs/: api.md  quickstart.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pv.yaml  rbac.yaml  secret.yaml  service.yaml
notebooks/: animals10_finetuning_example.ipynb
scripts/: convert_model.py  debug_tools.py  evaluate.py  generate_config.py  preprocess.py  train.py
src/api/: server.py
src/data/: augmentations.py  dataset.py  preprocessing.py  validation.py
src/deployment/: optimization.py
src/evaluation/: benchmarks.py  evaluators.py  visualization.py
src/models/: dinov3_classifier.py  model_factory.py
src/training/: experiment_tracking.py  trainer.py
src/utils/: config.py  device.py  logging.py  reproducibility.py  schemas.py
tests/: conftest.py  test_api.py  test_data.py  test_integration.py  test_models.py  test_performance.py
